updated few css

--- a/index.html
+++ b/index.html
@@ -55,11 +55,17 @@
                         </ul>
                         <h5 class="font-weight-bold">CERTIFICATION</h5>
                         <hr style="border-top: 2px solid #8e887f;">
-                        <p style="margin-bottom: 5px;"><strong>Family Counselor</strong><span class="badge badge-secondary" style="color: #fff; background-color: #565d50;">AUG 2021</span></p>
+                        <p class="d-flex" style="margin-bottom: 5px; display: flex;justify-content: space-between; align-items: center;">
+                            <strong>Family Counselor</strong>
+                            <span class="badge badge-secondary badge-custom" style=" color: #fff; background-color: #565d50;">AUG 2021</span>
+                        </p>
                         <p>Arowwai Industries Training Center, Any City</p>
                         <h5 class="font-weight-bold">MEMBERSHIP</h5>
                         <hr style="border-top: 2px solid #8e887f;">
-                        <p style="margin-bottom: 5px;"><strong>AMFT Member</strong><span class="badge badge-secondary" style="color: #fff; background-color: #565d50;">2022-PRESENT</span></p>
+                        <p class="d-flex" style="margin-bottom: 5px; display: flex;justify-content: space-between; align-items: center;">
+                            <strong>AMFT Member</strong>
+                            <span class="badge badge-secondary badge-custom" style=" color: #fff; background-color: #565d50;">AUG 2021</span>
+                        </p>
                         <p>Association for Marriage and Family Therapy</p>
                     </div>
                 </div>
@@ -83,15 +89,26 @@
                 <div class="education" style=" padding-left: 50px; padding-right: 50px; padding-top: 20px;">
                     <h5 class="section-title font-weight-bold">EDUCATION</h5>
                     <hr style="border-top: 2px solid #8e887f;">
-                    <p><strong>Master of Science in Marriage and Family Counseling </strong><span class="badge badge-secondary" style="color: #fff; background-color: #565d50;">2021</span></p>
-                    <p>Rimberio University <span style="text-align: right;">Graduated: May 2024</span></p>
+                    <p class="d-flex" style="margin-bottom: 0px; display: flex;justify-content: space-between; align-items: center;">
+                        <strong>Master of Science in Marriage</strong>
+                        <span class="badge badge-secondary badge-custom" style=" color: #fff; background-color: #565d50;">2021</span>
+                    </p>
+                    <strong>and Family Counseling</strong>
+                    <p class="d-flex" style="margin-bottom: 0px; display: flex;justify-content: space-between; align-items: center;margin-top: 8px; ">Rimberio University 
+                        <span>Graduated: May 2024</span>
+                    </p>
                     <hr style="border-top: 2px solid #8e887f;">
                 </div>
                 <div class="experience custom-font" style=" padding-left: 50px; padding-right: 50px; padding-top: 15px;">
                     <h5 class="section-title font-weight-bold">EXPERIENCE</h5>
                     <hr style="border-top: 2px solid #8e887f;">
-                    <p><strong>Family Wellness Counselor at Giggling Platypus Co., Any City</strong> <span class="badge badge-secondary" style="color: #fff; background-color: #565d50;">2022</span></p>
-                    <ul class="list-unstyled" style="line-height: 1.9;">
+                    <p class="d-flex" style="margin-bottom: 0px; display: flex;justify-content: space-between; align-items: center;">
+                        <strong>Family Wellness Counselor at</strong>
+                        <span class="badge badge-secondary badge-custom" style=" color: #fff; background-color: #565d50;">2022</span>
+                    </p>
+                    <strong>Giggling Platypus Co., Any City</strong>
+                     
+                    <ul class="list-unstyled" style="margin-top: 8px; line-height: 1.9;">
                         <li><i class="fa fa-asterisk" aria-hidden="true" style="padding-right: 10px; font-size: 13px;"></i>Conducted individual and family counseling sessions, addressing issues such as domestic violence, abuse, and others.</li>
                         <li><i class="fa fa-asterisk" aria-hidden="true"style="padding-right: 10px; font-size: 13px;"></i>Collaborated with a multidisciplinary team to develop holistic treatment plans for families.</li>
                         <li><i class="fa fa-asterisk" aria-hidden="true"style="padding-right: 10px; font-size: 13px;"></i>Collaborated with a multidisciplinary team to develop holistic treatment plans for families.</li>
