--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                         <hr style="border-top: 2px solid #8e887f;">
                         <p class="d-flex" style="margin-bottom: 5px; display: flex;justify-content: space-between; align-items: center;">
                             <strong>Family Counselor</strong>
-                            <span class="badge badge-secondary badge-custom" style=" color: #fff; background-color: #565d50;">AUG 2021</span>
+                            <span class="badge badge-secondary badge-custom" style="border-radius: 20px; color: #fff; background-color: #565d50;">AUG 2021</span>
                         </p>
                         <p>Arowwai Industries Training Center, Any City</p>
                         <h5 class="font-weight-bold">MEMBERSHIP</h5>
                         <hr style="border-top: 2px solid #8e887f;">
                         <p class="d-flex" style="margin-bottom: 5px; display: flex;justify-content: space-between; align-items: center;">
                             <strong>AMFT Member</strong>
-                            <span class="badge badge-secondary badge-custom" style=" color: #fff; background-color: #565d50;">AUG 2021</span>
+                            <span class="badge badge-secondary badge-custom" style="border-radius: 20px; color: #fff; background-color: #565d50;">AUG 2021</span>
                         </p>
                         <p>Association for Marriage and Family Therapy</p>
                     </div>
@@ -91,7 +91,7 @@
                     <hr style="border-top: 2px solid #8e887f;">
                     <p class="d-flex" style="margin-bottom: 0px; display: flex;justify-content: space-between; align-items: center;">
                         <strong>Master of Science in Marriage</strong>
-                        <span class="badge badge-secondary badge-custom" style=" color: #fff; background-color: #565d50;">2021</span>
+                        <span class="badge badge-secondary badge-custom" style=" border-radius: 20px; color: #fff; background-color: #565d50;">2021</span>
                     </p>
                     <strong>and Family Counseling</strong>
                     <p class="d-flex" style="margin-bottom: 0px; display: flex;justify-content: space-between; align-items: center;margin-top: 8px; ">Rimberio University 
@@ -104,7 +104,7 @@
                     <hr style="border-top: 2px solid #8e887f;">
                     <p class="d-flex" style="margin-bottom: 0px; display: flex;justify-content: space-between; align-items: center;">
                         <strong>Family Wellness Counselor at</strong>
-                        <span class="badge badge-secondary badge-custom" style=" color: #fff; background-color: #565d50;">2022</span>
+                        <span class="badge badge-secondary badge-custom" style=" border-radius: 20px; color: #fff; background-color: #565d50;">2022</span>
                     </p>
                     <strong>Giggling Platypus Co., Any City</strong>
                      
