--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row justify-content-center">
             <div class="col-md-4 profile-section" style="padding-left: 0px; padding-right: 0px;">
                 <div class="card profile-card">
-                    <div class="card-body text-center" style="background-color: #ece2da;">
+                    <div class="card-body text-center" style="background-color: #ece2da; padding: 20px 50px 0 50px;">
                         <div class="image-container" style="overflow: hidden; border-top-left-radius: 50%; border-top-right-radius: 50%; background-color: #f5e9df;">
                             <img src="woman.jpg" alt="Profile Image" class="img-fluid" style="width:100%; height: 250px;">
                         </div>
@@ -42,7 +42,7 @@
                             </div>
                         </p>
                     </div>
-                    <div class="card-footer" style="background-color: #f8f7f3;">
+                    <div class="card-footer" style="background-color: #f8f7f3; padding: 20px 50px 0 50px;">
                         <h5 class="font-weight-bold">SKILLS</h5>
                         <hr style="border-top: 2px solid #8e887f;">
                         <ul class="list-unstyled" style="line-height: 1.9;">
@@ -57,14 +57,15 @@
                         <hr style="border-top: 2px solid #8e887f;">
                         <p class="d-flex" style="margin-bottom: 5px; display: flex;justify-content: space-between; align-items: center;">
                             <strong>Family Counselor</strong>
-                            <span class="badge badge-secondary badge-custom" style="border-radius: 20px; color: #fff; background-color: #565d50;">AUG 2021</span>
+                            <span class="badge badge-secondary badge-custom" style="border-radius: 20px; color: #fff;padding: 8px; background-color: #565d50;">AUG 2021</span>
                         </p>
                         <p>Arowwai Industries Training Center, Any City</p>
+
                         <h5 class="font-weight-bold">MEMBERSHIP</h5>
                         <hr style="border-top: 2px solid #8e887f;">
                         <p class="d-flex" style="margin-bottom: 5px; display: flex;justify-content: space-between; align-items: center;">
                             <strong>AMFT Member</strong>
-                            <span class="badge badge-secondary badge-custom" style="border-radius: 20px; color: #fff; background-color: #565d50;">AUG 2021</span>
+                            <span class="badge badge-secondary badge-custom" style="border-radius: 20px; color: #fff;padding: 8px; background-color: #565d50;">AUG 2021</span>
                         </p>
                         <p>Association for Marriage and Family Therapy</p>
                     </div>
@@ -77,39 +78,36 @@
                     <hr style="border-top: 1px solid #a8a8a8; width: 10%; margin-left: 0;">
                     <p>A compassionate Family Wellness Counselor with a strong background in providing support and guidance to families facing various challenges.</p>
                 </div>
-                <div class="professional-summary" style=" padding-left: 50px; padding-right: 50px; padding-top: 20px;">
+                <div class="professional-summary" style="padding: 20px 50px 0 50px;">
                     <h5 class="section-title font-weight-bold">PROFESSIONAL SUMMARY</h5>
                     <hr style="border-top: 2px solid #8e887f;">
                     <ul class="list-unstyled" style="line-height: 1.9;">
-                        <li><i class="fa fa-asterisk" aria-hidden="true" style="padding-right: 10px; font-size: 13px;"></i>Over 5 years of experience in family counseling, specializing in conflict resolution and communication.</li>
+                        <li style="line-height: 1.4;"><i class="fa fa-asterisk" aria-hidden="true" style="padding-right: 10px; font-size: 13px;"></i>Over 5 years of experience in family counseling, specializing in conflict resolution and communication.</li>
                         <li><i class="fa fa-asterisk" aria-hidden="true" style="padding-right: 10px; font-size: 13px;"></i>Proficient in assessing family dynamics and creating tailored wellness plans.</li>
                         <li><i class="fa fa-asterisk" aria-hidden="true" style="padding-right: 10px; font-size: 13px;"></i>Collaborated with a multidisciplinary team to develop holistic treatment plans for families.</li>
                     </ul>
                 </div>
-                <div class="education" style=" padding-left: 50px; padding-right: 50px; padding-top: 20px;">
+                <div class="education" style=" padding: 20px 50px 0 50px;">
                     <h5 class="section-title font-weight-bold">EDUCATION</h5>
                     <hr style="border-top: 2px solid #8e887f;">
                     <p class="d-flex" style="margin-bottom: 0px; display: flex;justify-content: space-between; align-items: center;">
-                        <strong>Master of Science in Marriage</strong>
-                        <span class="badge badge-secondary badge-custom" style=" border-radius: 20px; color: #fff; background-color: #565d50;">2021</span>
+                        <strong>Master of Science in Marriage and Family Counseling</strong>
+                        <span class="badge badge-secondary badge-custom" style=" border-radius: 20px; color: #fff; padding: 8px;background-color: #565d50;">2021</span>
                     </p>
-                    <strong>and Family Counseling</strong>
                     <p class="d-flex" style="margin-bottom: 0px; display: flex;justify-content: space-between; align-items: center;margin-top: 8px; ">Rimberio University 
                         <span>Graduated: May 2024</span>
                     </p>
                     <hr style="border-top: 2px solid #8e887f;">
                 </div>
-                <div class="experience custom-font" style=" padding-left: 50px; padding-right: 50px; padding-top: 15px;">
+                <div class="experience custom-font" style=" padding: 20px 50px 0 50px;">
                     <h5 class="section-title font-weight-bold">EXPERIENCE</h5>
                     <hr style="border-top: 2px solid #8e887f;">
                     <p class="d-flex" style="margin-bottom: 0px; display: flex;justify-content: space-between; align-items: center;">
-                        <strong>Family Wellness Counselor at</strong>
-                        <span class="badge badge-secondary badge-custom" style=" border-radius: 20px; color: #fff; background-color: #565d50;">2022</span>
+                        <strong>Family Wellness Counselor at Giggling Platypus Co., Any City</strong>
+                        <span class="badge badge-secondary badge-custom" style=" border-radius: 20px; color: #fff; padding: 8px;background-color: #565d50;">2022</span>
                     </p>
-                    <strong>Giggling Platypus Co., Any City</strong>
-                     
-                    <ul class="list-unstyled" style="margin-top: 8px; line-height: 1.9;">
-                        <li><i class="fa fa-asterisk" aria-hidden="true" style="padding-right: 10px; font-size: 13px;"></i>Conducted individual and family counseling sessions, addressing issues such as domestic violence, abuse, and others.</li>
+                    <ul class="list-unstyled custom-list" style="margin-top: 8px; line-height: 1.9;">
+                        <li style="line-height: 1.4;"><i class="fa fa-asterisk" aria-hidden="true" style="padding-right: 10px; font-size: 13px;"></i>Conducted individual and family counseling sessions, addressing issues such as domestic violence, abuse, and others.</li>
                         <li><i class="fa fa-asterisk" aria-hidden="true"style="padding-right: 10px; font-size: 13px;"></i>Collaborated with a multidisciplinary team to develop holistic treatment plans for families.</li>
                         <li><i class="fa fa-asterisk" aria-hidden="true"style="padding-right: 10px; font-size: 13px;"></i>Collaborated with a multidisciplinary team to develop holistic treatment plans for families.</li>
                     </ul>
